2004-04-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyInfo.cs: Added
	* ChangeLog: Added
	* Locale.cs: Added